--- a/introduction.Rmd
+++ b/introduction.Rmd
@@ -80,9 +80,9 @@ There is a need for research investigating how adolescent learning and decision-
 Status during adolescence has been studied from a variety of perspectives, including perceptions, structure, strategies, and outcomes [@allen2005;@jarvinen_adolescents_1996;@lafontana2010;@savin-williams1979;@SelfhoutEmergingLateAdolescent2010;@underwood1996].
 Although the motivation to gain status (as distinct from social status, per se) has been addressed, the literature on status-related social goals typically relies on self-report.
 For example, using self-report measures, @lafontana2010 found that prioritizing status over other domains (e.g., achievement, friendship) peaks in late adolescence.
-This kind of Work often also employs peer-nomination of popularity or sociometric methods, and has generally found that self-reported motivation to pursue popularity, or related agentic or dominance goals, is only weakly associated with social status from middle childhood [@rodkin2013] through adolescence [@caravita2012;@cillessen2014;@jarvinen_adolescents_1996;@ojanen2005].
+This kind of work often also employs peer-nomination of popularity or sociometric methods, and has generally found that self-reported motivation to pursue popularity, or related agentic or dominance goals, is only weakly associated with social status from middle childhood [@rodkin2013] through adolescence [@caravita2012;@cillessen2014;@jarvinen_adolescents_1996;@ojanen2005].
 This highlights the important distinction between an intrinsic motivation to learn about and navigate status hierarchies, and the ability (or lack thereof) to successfully actualize that motive.
-This same literature also implicates both popularity per se, _as well as_ status-related social goals in negative behaviors like agression [@cillessen2014;@ojanen2005] and bullying [@caravita2012], indicating that it is crucial to study motives to fully understand processes and outcomes related to status in adolescence.
+This same literature also implicates both popularity per se, _as well as_ status-related social goals, in negative behaviors like agression [@cillessen2014;@ojanen2005] and bullying [@caravita2012], indicating that it is crucial to study motives to fully understand processes and outcomes related to status in adolescence.
 However, reliance on self-report is not always optimal, especially in a domain with strong social norms about the value of having and attaining high status may plausibly contaminate these measures.
 It would be useful to be able to make use of a behavioral measure of status motives that is less susceptible to self-report biases.
 
