--- a/abstract.tex
+++ b/abstract.tex
@@ -1,5 +1,5 @@
 The study of decision making during adolescence has received considerable attention throughout the history of developmental psychology, justifiably, given the marked increases in morbidity and mortality that belie otherwise robust health.
-Although the dominant theories invoked to help explain decision-making during adolescence acknowledge the existence of motivations that are thought to be central to this developmental period, there is almost no work that investigates the effect of these motives, per se.
+Although the dominant theories invoked to help explain decision-making during adolescence acknowledge the existence of motivations that are thought to be central to this developmental period, there is little work that investigates the effects of these motives, per se.
 In particular, motivations toward developing sexual and romantic relationships, as well as finding one's optimal position in peer status hierarchies have both been acknowledged as especially relevant for this period of development.
 Almost all research in this area focuses on self-report, and is heavily weighted toward the domain of status and popularity.
 A major gap in this literature is an understanding of how adolescent-relevant motivations affect basic behavioral processes, and of the consequences of individual differences in motivations.
